import { App } from 'aws-cdk-lib';
import { Template } from 'aws-cdk-lib/assertions';
import {
    supportApisDomain,
    supportCertificateId,
    supportHostedZoneId,
} from '../bin/cdk';
import { DiscountApi } from './discount-api';
import {MParticleApi} from "./mparticle-api";

describe('The mParticle API stack', () => {
    it('matches the snapshot', () => {
        const app = new App();
        const codeStack = new MParticleApi(app, 'mparticle-api-CODE', {
            stack: 'membership',
            stage: 'CODE',
        });
        const prodStack = new MParticleApi(app, 'mparticle-api-PROD', {
            stack: 'membership',
            stage: 'PROD',
        });

        expect(Template.fromStack(codeStack).toJSON()).toMatchSnapshot();
        expect(Template.fromStack(prodStack).toJSON()).toMatchSnapshot();
    });
});
